--- a/scripts/plugin-template/test/{{kebabCase name}}.spec.js.hbs
+++ b/scripts/plugin-template/test/{{kebabCase name}}.spec.js.hbs
@@ -1,3 +1,4 @@
+import { afterEach, beforeAll, beforeEach, describe, expect, it } from 'vitest';
 import pillarbox from '@srgssr/pillarbox-web';
 import {{properCase name}} from '../src/{{kebabCase name}}.js';
 
