--- a/scripts/plugin-template/package.json.hbs
+++ b/scripts/plugin-template/package.json.hbs
@@ -2,9 +2,15 @@
   "name": "@srgssr/{{kebabCase name}}",
   "version": "0.0.1",
   "type": "module",
-  "main": "dist/{{kebabCase name}}.umd.js",
+  "main": "dist/{{kebabCase name}}.cjs.js",
   "module": "dist/{{kebabCase name}}.es.js",
   "style": "./dist/{{kebabCase name}}.min.css",
+  "exports": {
+    ".": {
+      "import": "./dist/{{kebabCase name}}.es.js",
+      "require": "./dist/{{kebabCase name}}.cjs.js"
+    }
+  },
   "files": [
     "dist/*",
     "scss/*"
@@ -23,7 +29,7 @@
     "build:lib": "rollup -c",
     "github:page": "parcel build index.html --target github-page",
     "start": "parcel -p 4200 index.html",
-    "test": "jest --verbose"
+    "test": "vitest run --silent --coverage --coverage.reporter text"
   },
   "peerDependencies": {
     "@srgssr/pillarbox-web": "^1.0.0"
