chore: add skip button test
- Ensures that the skip button component functions correctly in isolation.
- Moved class building to `buildCssClass` function.
- Adjusted style and removed unused inline in `skip-button-plugin.js` file.
- Fixed the plugin configuration example in the README.
- Fixed the plugin configuration example in the README template.

--- a/scripts/plugin-template/README.md.hbs
+++ b/scripts/plugin-template/README.md.hbs
@@ -40,7 +40,7 @@ Once the player is installed you can activate the plugin as follows:
 import Pillarbox from '@srgssr/pillarbox-web';
 import '@srgssr/{{kebabCase name}}';
 
-const player = new Pillarbox('my-player', { plugins: { '{{kebabCase name}}': true } });
+const player = new Pillarbox('my-player', { plugins: { '{{camelCase name}}': true } });
 player.src({
   src: 'urn:swi:video:48115940',
   type: 'srgssr/urn'
