refactor: add dedicated localization files
- Adds dedicated `json` files for each localization.
- A new prompt has been added to the `create:plugin` script asking for localization,
  this prompt will automatically generate the folder structure and the bindings if the
  users wishes to include localization to their plugin.

--- a/scripts/plugin-template/src/{{kebabCase name}}.js.hbs
+++ b/scripts/plugin-template/src/{{kebabCase name}}.js.hbs
@@ -1,4 +1,5 @@
 import pillarbox from '@srgssr/pillarbox-web';
+{{#if wantLocalization}}import './lang';{{/if}}
 
 /**
  * @ignore
@@ -23,4 +24,4 @@ class {{properCase name}} extends Plugin {
 
 pillarbox.registerPlugin('{{camelCase name}}', {{properCase name}});
 
-export default {{propertCase name}};
+export default {{properCase name}};
