--- a/scripts/template/README.md.hbs
+++ b/scripts/template/README.md.hbs
@@ -1,7 +1,7 @@
 # Pillarbox Web: {{titleCase name}}
 
 <!--
-Introduce your plugin with a clear overview of its goals, providing
+Introduce your {{lowerCase type}} with a clear overview of its goals, providing
 essential context and addressing fundamental questions.
 -->
 
@@ -13,7 +13,7 @@ To use this component, you need the following installed on your system:
 
 ## Quick Start
 
-To get started with this plugin, follow these steps:
+To get started with this {{lowerCase type}}, follow these steps:
 
 Add the `@srgssr` registry to your `.npmrc` file:
 
@@ -34,13 +34,17 @@ npm install --save @srgssr/pillarbox-web @srgssr/{{kebabCase name}}
 
 For instructions on setting up Pillarbox, see the [Quick Start guide](SRGSSR/pillarbox-web#quick-start).
 
-Once the player is installed you can activate the plugin as follows:
+Once the player is installed you can activate the {{lowerCase type}} as follows:
 
 ```javascript
 import Pillarbox from '@srgssr/pillarbox-web';
 import '@srgssr/{{kebabCase name}}';
 
+{{#ifEq type 'plugin'}}
 const player = new Pillarbox('my-player', { plugins: { '{{camelCase name}}': true } });
+{{else}}
+const player = new Pillarbox('my-player', { {{properCase name}}: true });
+{{/ifEq}}
 player.src({
   src: 'urn:swi:video:48115940',
   type: 'srgssr/urn'
