--- a/scripts/template/index.html.hbs
+++ b/scripts/template/index.html.hbs
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>{{titleCase name}} Demo</title>
-  <link rel="stylesheet" href="npm:@srgssr/pillarbox-web/dist/pillarbox.min.css"/>
   <style>
     html,
     body {
@@ -22,6 +21,7 @@
 <video id="player" class="pillarbox-js" controls muted></video>
 
 <script type="module">
+  import '@srgssr/pillarbox-web/dist/pillarbox.min.css';
   import pillarbox from '@srgssr/pillarbox-web';
   import './src/{{kebabCase name}}.js';
 
