feat(playlist): add optional ui for the playlist plugin
Resolves #8 by adding an optional a modal that contains a simple playlist with controls such as
enable/disable repeat, previous and next buttons, and the ability to select items from the list
directly.

***How to Activate the UI***

To activate the optional UI for the playlist plugin, you need to add the `PillarboxPlaylistButton`
to the control bar of your Video.js player. Here’s an example:

```javascript
import videojs from 'video.js';
import '@srgssr/pillarbox-playlist';
import '@srgssr/pillarbox-playlist/ui';

// Initialize the Video.js player
const player = videojs('my-video', {
  plugins: {
    pillarboxPlaylist: { autoadvance: true, repeat: true },
      // Add the PillarboxPlaylistButton just before the fullscreenToggle button
    pillarboxPlaylistUI: { insertChildBefore: 'fullscreenToggle' }
  }
});

// Define your video sources
const playlist = [
  {
    sources: [{ src: 'https://www.w3schools.com/html/mov_bbb.mp4', type: 'video/mp4' }],
    data: { title: 'Big Buck Bunny', duration: 10 }
  },
  {
    sources: [{ src: 'https://www.w3schools.com/html/movie.mp4', type: 'video/mp4' }],
    data: { title: 'Sample Video', duration: 12 }
  }
];

// Load the playlist into the player
player.pillarboxPlaylist().load(playlist);
```

- Converted the plugin to be a pure video.js plugin. Initially intended as a pillarbox plugin, it
  was decided that any interaction with our business core logic can be handled outside of the
  plugin, e.g.:
  ```javascript
  import { default as pillarbox, SrgSsr} from '@srgssr/pillarbox-web';

  const player = pillarbox('player', { plugins: { pillarboxPlaylist: true } });

  const sources = [
    'urn:rts:video:14827742',
    'urn:rts:video:9883196',
  ];

  Promise.all(sources.map(async urn => {
    const mediaComposition = await SrgSsr.getMediaComposition(urn, SrgSsr.dataProvider(player));
    const mainChapter = mediaComposition.getMainChapter();

    return {
      sources: [{ 

--- a/scripts/template/package.json.hbs
+++ b/scripts/template/package.json.hbs
@@ -8,13 +8,13 @@
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite/{{kebabCase name}}",
   "type": "module",
-  "main": "dist/{{kebabCase name}}.cjs.js",
-  "module": "dist/{{kebabCase name}}.es.js",
+  "main": "dist/{{kebabCase name}}.cjs",
+  "module": "dist/{{kebabCase name}}.js",
   "style": "./dist/{{kebabCase name}}.min.css",
   "exports": {
     ".": {
-      "import": "./dist/{{kebabCase name}}.es.js",
-      "require": "./dist/{{kebabCase name}}.cjs.js"
+      "import": "./dist/{{kebabCase name}}.js",
+      "require": "./dist/{{kebabCase name}}.cjs"
     },
     "./*": "./*"
   },
