--- a/scripts/template/vite.config.lib.js.hbs
+++ b/scripts/template/vite.config.lib.js.hbs
@@ -5,8 +5,8 @@ import babel from '@rollup/plugin-babel';
  * Vite's configuration for the lib build.
  *
  * Outputs:
- * - 'dist/{{kebabCase name}}.es.js': ESModule version with sourcemaps.
- * - 'dist/{{kebabCase name}}.cjs.js': CommonJS version with sourcemaps.
+ * - 'dist/{{kebabCase name}}.js': ESModule version with sourcemaps.
+ * - 'dist/{{kebabCase name}}.cjs': CommonJS version with sourcemaps.
  */
 export default defineConfig({
   esbuild: false,
