docs: css and events documentation
- Adds instructions on how to include the CSS for each package.
- Updates the README template so that future package also include a CSS section.
- Adds API documentation for the playlist's events.

--- a/scripts/template/README.md.hbs
+++ b/scripts/template/README.md.hbs
@@ -49,6 +49,12 @@ const player = {{platform}}('my-player', { {{properCase name}}: true });
 {{/ifEq}}
 ```
 
+To apply the default styling, add the following line to your CSS file:
+
+```css
+@import "@srgssr/{{kebabCase name}}/dist/{{kebabCase name}}.min.css";
+```
+
 ## Contributing
 
 For detailed contribution guidelines, refer to the main project’s [README file][main-readme]. Please
