--- a/packages/pillarbox-playlist/scss/pillarbox-playlist.scss
+++ b/packages/pillarbox-playlist/scss/pillarbox-playlist.scss
@@ -51,4 +51,22 @@
       border-radius: 0.5em;
     }
   }
+
+  .pbw-repeat-one {
+    position: relative;
+  }
+
+  .pbw-repeat-one::after {
+    position: absolute;
+    right: 0.5em;
+    bottom: 0.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1em;
+    height: 1em;
+    font-size: 1em;
+    border-radius: 50%;
+    content: "1";
+  }
 }
