--- a/scripts/template/src/lang/index.js.hbs
+++ b/scripts/template/src/lang/index.js.hbs
@@ -1,12 +1,19 @@
-import * as de from './de.json';
-import * as en from './en.json';
-import * as fr from './fr.json';
-import * as it from './it.json';
-import * as rm from './rm.json';
+import de from './de.json';
+import en from './en.json';
+import fr from './fr.json';
+import it from './it.json';
+import rm from './rm.json';
 import {{platform}} from '{{importAlias}}';
 
-{{platform}}.addLanguage('de', de);
-{{platform}}.addLanguage('en', en);
-{{platform}}.addLanguage('fr', fr);
-{{platform}}.addLanguage('it', it);
-{{platform}}.addLanguage('rm', rm);
+function extendLanguage(code, data) {
+  {{platform}}.addLanguage(code, {
+    ...{{platform}}.options.language[code] ?? {},
+    ...data
+  });
+}
+
+extendLanguage('de', de);
+extendLanguage('en', en);
+extendLanguage('fr', fr);
+extendLanguage('it', it);
+extendLanguage('rm', rm);
