fix: publish pillarbox-suite to npm
Automated the process of publishing pillarbox-suite packages to npm by updating necessary
configurations and workflows.

Changes include:

- Updated GitHub Actions workflows to automate the publishing process to npm.
- Modified package.json files to ensure correct npm configuration.
- Added a LICENSE file to each package and updated the `create` script to automatically include one.

--- a/scripts/template/README.md.hbs
+++ b/scripts/template/README.md.hbs
@@ -13,20 +13,7 @@ To use this {{lowerCase type}}, you need the following installed on your system:
 
 ## Quick Start
 
-To get started with this {{lowerCase type}}, follow these steps:
-
-Add the `@srgssr` registry to your `.npmrc` file:
-
-```plaintext
-//npm.pkg.github.com/:_authToken=TOKEN
-@srgssr:registry=https://npm.pkg.github.com
-```
-
-Generate a personal access token on the [Personal Access Tokens page][token-settings]. For more
-information on using tokens with GitHub packages,
-visit: [Authenticating with a Personal Access Token][token-guide].
-
-You can now install it through `npm` the following command:
+To get started with this {{lowerCase type}}, install it through the following command:
 
 ```bash
 npm install --save {{importAlias}} @srgssr/{{kebabCase name}}
@@ -91,7 +78,7 @@ http://localhost:4200/?language=fr&urn=urn:rts:video:14318206
 
 ## Licensing
 
-This project is licensed under the MIT License. See the [LICENSE](../../LICENSE) file for more
+This project is licensed under the MIT License. See the [LICENSE](./LICENSE) file for more
 details.
 
 [main-readme]: ../../docs/README.md#Contributing
