--- a/scripts/template/package.json.hbs
+++ b/scripts/template/package.json.hbs
@@ -2,12 +2,13 @@
   "name": "@srgssr/{{kebabCase name}}",
   "version": "0.0.1",
   "license": "MIT",
+  "author": "SRG SSR",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SRGSSR/pillarbox-web-suite.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite/{{kebabCase name}}",
   "type": "module",
