docs: fix quick start link
Fix all the links to the quick start guide of pillarbox-web.

--- a/scripts/template/README.md.hbs
+++ b/scripts/template/README.md.hbs
@@ -20,7 +20,8 @@ npm install --save {{importAlias}} @srgssr/{{kebabCase name}}
 ```
 
 {{#ifEq platform 'pillarbox'}}
-For instructions on setting up Pillarbox, see the [Quick Start guide](SRGSSR/pillarbox-web#quick-start).
+For instructions on setting up Pillarbox, see
+the [Quick Start guide](https://github.com/SRGSSR/pillarbox-web#quick-start).
 
 {{/ifEq}}
 Once the player is installed you can activate the {{lowerCase type}} as follows:
