docs: changed homepage in package json
- Makes the homepage point to the readme file in github for each individual
  package instead of the demo page for better discoverability.
- Fixes links to contributing guidelines.

--- a/scripts/template/package.json.hbs
+++ b/scripts/template/package.json.hbs
@@ -10,7 +10,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://srgssr.github.io/pillarbox-web-suite/{{kebabCase name}}",
+  "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/{{kebabCase name}}#readme",
   "type": "module",
   "main": "dist/{{kebabCase name}}.cjs",
   "module": "dist/{{kebabCase name}}.js",
