--- a/scripts/template/src/{{kebabCase name}}.js.hbs
+++ b/scripts/template/src/{{kebabCase name}}.js.hbs
@@ -1,4 +1,5 @@
 import {{platform}} from '{{importAlias}}';
+import { version } from '../package.json';
 {{#if wantLocalization}}import './lang';{{/if}}
 
 {{#ifEq type 'Plugin'}}
@@ -23,6 +24,7 @@ class {{properCase name}} extends Plugin {
   }
 }
 
+{{properCase name}}.VERSION = version;
 {{platform}}.registerPlugin('{{camelCase name}}', {{properCase name}});
 {{else}}
 /**
@@ -54,6 +56,7 @@ class {{properCase name}} extends {{type}} {
   }
 }
 
+{{properCase name}}.VERSION = version;
 {{platform}}.registerComponent('{{properCase name}}', {{properCase name}});
 {{/ifEq}}
 
