fix(playlist-plugin): expose playlist plugin version
Expose the plugin version by adding a static getter `VERSION` to all plugins and
components. To retrieve the version of the component on a given player simply do:

```javascript
// Retrieve the player
const player = document.getElementsByTagName('video')[0].parentElement.player;
// Print the component version
console.log(player.pillarboxPlaylist().version());
```

--- a/scripts/template/src/{{kebabCase name}}.js.hbs
+++ b/scripts/template/src/{{kebabCase name}}.js.hbs
@@ -22,9 +22,12 @@ class {{properCase name}} extends Plugin {
   constructor(player, options) {
     super(player, options);
   }
+
+  static get VERSION() {
+    return version;
+  }
 }
 
-{{properCase name}}.VERSION = version;
 {{platform}}.registerPlugin('{{camelCase name}}', {{properCase name}});
 {{else}}
 /**
@@ -54,9 +57,12 @@ class {{properCase name}} extends {{type}} {
   handleLanguagechange() {
     super.handleLanguagechange();
   }
+
+  static get VERSION() {
+    return version;
+  }
 }
 
-{{properCase name}}.VERSION = version;
 {{platform}}.registerComponent('{{properCase name}}', {{properCase name}});
 {{/ifEq}}
 
