chore(create): allow opt-out of scss on new component
Add a new prompt in the component generator to allow opting out of SCSS when creating a new element.

When SCSS is disabled, the generated component will skip the SCSS-to-CSS compilation step, adjust
the package configuration to avoid exporting any CSS file, and no SCSS file will be created by
default.

--- a/scripts/template/README.md.hbs
+++ b/scripts/template/README.md.hbs
@@ -37,12 +37,14 @@ const player = {{platform}}('my-player', { {{properCase name}}: true });
 {{/ifEq}}
 ```
 
+{{#if wantScss}}
 To apply the default styling, add the following line to your CSS file:
 
 ```css
 @import "@srgssr/{{kebabCase name}}/dist/{{kebabCase name}}.min.css";
 ```
 
+{{/if}}
 ## Contributing
 
 For detailed contribution guidelines, refer to our [Contributing guide][contributing-guide].
