--- a/scripts/template/index.html.hbs
+++ b/scripts/template/index.html.hbs
@@ -22,8 +22,8 @@
 
 <script type="module">
   import '@srgssr/pillarbox-web/dist/pillarbox.min.css';
-  import pillarbox from '@srgssr/pillarbox-web';
-  import './scss/{{kebabCase name}}.scss';
+  import pillarbox from '@srgssr/pillarbox-web';{{#if wantScss}}
+  import './scss/{{kebabCase name}}.scss';{{/if}}
   import './src/{{kebabCase name}}.js';
 
   // Handle URL parameters
