chore: use camel case for examples and documentation
Changes every component's initialization in examples and documentation from proper case
to the preferred camel case. This change also applies to the templates of the `create`
cli.

Added mising VERSION static property tests for all components.

--- a/scripts/template/README.md.hbs
+++ b/scripts/template/README.md.hbs
@@ -33,7 +33,7 @@ import '@srgssr/{{kebabCase name}}';
 {{#ifEq type 'plugin'}}
 const player = {{platform}}('my-player', { plugins: { '{{camelCase name}}': true } });
 {{else}}
-const player = {{platform}}('my-player', { {{properCase name}}: true });
+const player = {{platform}}('my-player', { {{camelCase name}}: true });
 {{/ifEq}}
 ```
 
