feat: add reusable svg button component and refactor existing buttons
Resolves #72 by introducing `SvgButton` and `SvgComponent` base classes for Video.js to simplify
adding custom SVG icons to the player UI. These components accept multiple icon input formats (
SVGElement, raw SVG string, URL) and can also integrate with Video.js’s experimental SVG icon system
and icon fonts.

- Refactored `AirplayButton` to use `SvgButton` internally.
- Refactored `BrandButton` to use `SvgComponent` internally.

--- a/packages/airplay-button/scss/airplay-button.scss
+++ b/packages/airplay-button/scss/airplay-button.scss
@@ -1,5 +1,1 @@
-.vjs-airplay-button svg.icon-from-options {
-  height: 1.67em;
-  cursor: pointer;
-  fill: currentColor;
-}
+@import '@srgssr/svg-button/dist/svg-button.min.css';
