--- a/packages/brand-button/scss/brand-button.scss
+++ b/packages/brand-button/scss/brand-button.scss
@@ -1,7 +1,1 @@
-.pbw-brand-button .pbw-brand-button-icon-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding: 1em 0;
-}
+@import '@srgssr/svg-button/dist/svg-button.min.css';
