feat(cast): add customizable google cast button and native launcher
Resolves #75 by introducing two new components:

- `GoogleCastButton`: a customizable Cast button based on SvgButton, allowing developers to
  integrate with their own visual identity. The icon can be customized via `icon` or `iconName`.
- `GoogleCastLauncher`: a wrapper around the native `<google-cast-launcher>` element for a
  plug-and-play experience.

The enableDefaultCastButton option has been renamed enableDefaultCastLauncher.

--- a/packages/google-cast-sender/scss/google-cast-sender.scss
+++ b/packages/google-cast-sender/scss/google-cast-sender.scss
@@ -1,15 +1,16 @@
-.vjs-chromecast-button.vjs-button {
+.vjs-google-cast-launcher.vjs-button {
   --connected-color: currentColor;
-  --disconnected-color:currentColor;
+  --disconnected-color: currentColor;
   padding: .55em;
+  cursor: pointer;
 }
 
 .vjs-tech-chromecast {
-    display: none;
-    background-color: #000;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+  display: none;
+  background-color: #000;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .vjs-tech-chromecast-container {
@@ -45,4 +46,8 @@
   .vjs-picture-in-picture-control {
     display: none;
   }
+}
+
+.vjs-google-cast-button {
+  cursor: pointer;
 }
