chore: add multi-target build system with run-all helper
Introduces a complete multi-target build system across the template and packages, simplifying and
standardizing builds with multiple outputs.

Changes include:

- Updated `create` template:
  - Added `.build.config.js` defining the default build and instructions for adding new targets.
  - `vite.config.lib.js` and `vite.config.umd.js` now dynamically import the current build target
    from `.build.config.js` via the `BUILD_TARGET` environment variable.
  - The template now ships with multi-output builds by default.

- Added `npm-run-all` and `rimraf` helper scripts to reduce boilerplate in `package.json`.

- Updated packages to use the new system:
  - `pillarbox-playlist` and `google-cast-sender` plugins now supports multi-output builds.
  - All package `build` scripts now leverage the helper script to ensure consistency.

--- a/scripts/template/package.json.hbs
+++ b/scripts/template/package.json.hbs
@@ -35,7 +35,8 @@
     "pillarbox-plugin"{{/ifEq}}{{/ifEq}}
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:umd{{#if wantScss}} && npm run build:css{{/if}}",{{#if wantScss}}
+    "clean": "rimraf dist",
+    "build": "npm-run-all clean build:*",{{#if wantScss}}
     "build:css": "sass ./scss/{{kebabCase name}}.scss:dist/{{kebabCase name}}.min.css --style compressed --source-map --load-path node_modules",{{/if}}
     "build:lib": "vite build --config vite.config.lib.js",
     "build:umd": "vite build --config vite.config.umd.js",
