feat: display live label livestream items
Resolves #78 by adding support for the `metadata.live` option in playlist items.

When `metadata.live` is true, the duration element now displays "Live" instead,
and the `vjs-card-duration-live` class is added for styling purposes.

--- a/packages/pillarbox-playlist/scss/pillarbox-playlist.scss
+++ b/packages/pillarbox-playlist/scss/pillarbox-playlist.scss
@@ -61,10 +61,14 @@
       .vjs-card-duration {
         position: absolute;
         top: 4em;
-        left: 6.5em;
+        right: 17em;
         color: white;
         background-color: rgb(0, 0, 0, 0.5);
         padding-inline: 0.5em;
+
+        &.vjs-card-duration-live {
+          background-color: rgb(255, 0, 0, 0.5);
+        }
       }
     }
   }
