--- a/packages/legacy-chapters-navigation/scss/legacy-chapters-navigation.scss
+++ b/packages/legacy-chapters-navigation/scss/legacy-chapters-navigation.scss
@@ -36,7 +36,7 @@
     bottom: 0;
     z-index: 0;
     width: 100%;
-    padding: 0 4em;
+    padding: 0 2.5em;
   }
 
   &.vjs-has-started.vjs-fullscreen {
@@ -71,7 +71,7 @@
     padding-bottom: 1em;
     visibility: visible;
     opacity: 1;
-    transition: visibility .1s,opacity .1s;
+    transition: visibility .1s, opacity .1s;
   }
 
   &:not(.vjs-device-iphone, &.vjs-device-android) {
@@ -105,18 +105,19 @@
 
 
   .vjs-control.pbw-chapter-button {
-    --arrow-size: 3em;
+    --arrow-size: 2em;
     position: absolute;
-    bottom: 50%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    border-radius: 0;
     z-index: 1;
     display: flex;
     width: var(--arrow-size);
-    height: var(--arrow-size);
+    height: 100%;
     place-content: center;
     place-items: center;
     background-color: #16191dbb;
-    border-radius: 50%;
-    transform: translateY(50%);
     cursor: pointer;
 
     &.vjs-disabled {
@@ -142,16 +143,25 @@
   }
 
   .pbw-chapter-previous {
-    left: 0.5em;
+    left: 0.2em;
   }
 
   .pbw-chapter-next {
-    right: 0.5em;
+    right: 0.2em;
   }
 
   .pbw-chapter-button .icon-from-options {
     width: 100%;
     height: 100%;
     cursor: inherit;
+  }
+
+  @media screen and (pointer:coarse) and (max-width: 1280px) {
+    .pbw-chapters-navigation {
+      padding: 0;
+    }
+    .vjs-control.pbw-chapter-button {
+      display: none;
+    }
   }
 }
